[tool.poetry]
name = "django_payflow"
version = "2.0.3"
description = "A django app for interaction with the django_payflow api"
homepage = "https://github.com/ImaginaryLandscape/django_payflow"
readme = "README.md"
authors = ["Imagescape <info@imagescape.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.7"
django = ">=3.2,<5.0"
requests = "^2.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
